--- a/MQ2Elixir.vcxproj.filters
+++ b/MQ2Elixir.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="WizardElixir.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CommonDoTDisease.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\MQ2Plugin.h">
@@ -144,6 +147,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WizardElixir.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CommonDoTDisease.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
